kubernetes/ingress-myapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  annotations:
    # These are different nginx settings
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp-k8s.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service2
            port:
              number: 80
