kubernetes/networkpolicy-1.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
  namespace: default
spec:
  # The rule applies to the following pods
  podSelector:
    matchLabels:
      app: myapp
  # Allow inbound traffic
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: myapp
    ports:
      - port: 80
