kubernetes/networkpolicy-3.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-same-namespace
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: myapp
  egress:
  - to:
    - podSelector:
        matchLabels:
          color: myapp
    ports:
    - port: 80
